--- a/frontend/res/values/strings.xml
+++ b/frontend/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="hello">Hello World, KharamlyActivity!</string>
     <string name="app_name">Kharamly</string>
     <string name="street_block">Report Blocked Street</string>
+	<string name="ok">Ok</string>
+	<string name="cancel">Cancel</string>
+	<string name="title">Title</string>
+	<string name="enter_comment">Enter your desired destination here:</string>
 
 </resources>
