--- a/frontend/res/values/strings.xml
+++ b/frontend/res/values/strings.xml
@@ -18,4 +18,5 @@
 	<string name="no_net">No Network Available, do you want to enable the WiFi or your Mobile Network?</string>
 	<string name="type">Type here...</string>
 	<string name="exit">Are you sure you want to exit?</string>
+	<string name="show_badges">Badges</string>
 </resources>
